--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.78~1) unstable; urgency=low
+
+  * Unreleased
+
+ -- Stanislav Ionascu <stanislav.ionascu@nokia.com>  Thu, 27 Jan 2011 09:19:22 +0200
+
 libmeegotouch (0.20.77-1) unstable; urgency=low
 
   * Fixes: NB#206584 - MAbstractItemModel was returning an invalid parent index
