--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,20 @@
-libmeegotouch (0.20.78~1) unstable; urgency=low
+libmeegotouch (0.20.78-1) unstable; urgency=low
 
-  * Unreleased
+  * New version
+  * Fixes: NB#208915 - Navigation bar styling doesn't work if first page doesn't have navigation bar and invoker is used
+  * Fixes: NB#222807 - [TASK] mthemedaemon should use the meego graphicssystem
+  * Fixes: NB#219895
+  * Fixes: NB#217075 - List/view panning always starts with a jump
+  * Fixes: NB#214528 - MLabel does not render text in certain cases if in richtext mode.
+  * Fixes: Build break on Mac without ICU.
+  * Fixes: NB#206906 MList filter stops responding in widgetsgallery list page
+  * Fixes: NB#217234 - [TASK] Calling MLocale::formatDateTime() generates 98 stat64() calls to files that do not ever exist
+  * Fixes: NB#206357 - Calling MLocale::formatDateTime() takes over 7msec
+  * Fixes: NB#208977, Time and date always in Hindi numbers and does not affected for the numeric system (Hindi-Latin) changing in Arabic language
+  * Fixes: NB#220587 - WM_CLASS window property not set by MComponentCache::mApplicationWindow
+  * Fixes: Arguments list is accessed in themedaemon before the QCoreApplication instance is created.
 
- -- Stanislav Ionascu <stanislav.ionascu@nokia.com>  Thu, 27 Jan 2011 09:19:22 +0200
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Mon, 31 Jan 2011 15:57:23 +0200
 
 libmeegotouch (0.20.77-1) unstable; urgency=low
 
