--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.81~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 02 Feb 2011 13:57:08 +0200
+
 libmeegotouch (0.20.80-1) unstable; urgency=low
 
   * New version
