--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libmeegotouch (0.20.81-2) unstable; urgency=low
+
+  * New version
+  * Fixes: NB#225456 - call-history.launch crashes when trying to add new contact from dialer view
+  * Fixes:NB#224577 - Typed numbers in dialer view are strangely aligned and truncated
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 08 Feb 2011 14:49:17 +0200
+
 libmeegotouch (0.20.81-1) unstable; urgency=low
 
   * New version
