--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.83~1) unstable; urgency=low
+
+  * Unreleased
+
+ -- Stanislav Ionascu <stanislav.ionascu@nokia.com>  Wed, 09 Feb 2011 08:14:17 +0200
+
 libmeegotouch (0.20.82-1) unstable; urgency=low
 
   * New version
