--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.84~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 09 Feb 2011 15:24:26 +0200
+
 libmeegotouch (0.20.83-1) unstable; urgency=low
 
   * New version
