--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libmeegotouch (0.20.83-2) unstable; urgency=low
+
+  * New version
+  * Fixes: NB#226456 - Calendar closes after saving new event
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Fri, 11 Feb 2011 10:49:13 +0200
+
 libmeegotouch (0.20.83-1) unstable; urgency=low
 
   * New version
