--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libmeegotouch (0.20.83-3) unstable; urgency=low
+
+  * New version
+  * Fixes: NB#226750 - Double widget free in widget recycler.
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Wed, 16 Feb 2011 12:40:12 +0200
+
 libmeegotouch (0.20.83-2) unstable; urgency=low
 
   * New version
