--- a/src/icu-extradata/data/lang/zh_Hant.txt
+++ b/src/icu-extradata/data/lang/zh_Hant.txt
@@ -499,16 +499,16 @@ zh_Hant{
         zap{"薩波特克文"}
         zbl{"布列斯符號"}
         zen{"澤納加文"}
-        zh{"中文"}
+        zh{"中文 (中国大陆)"}
         zh_CN{"中文 (中国大陆)"}
         zh_Hans_CN{"中文 (中国大陆)"}
         zh_Hant_CN{"中文 (中國大陸)"}
         zh_SG{"中文(新加坡)"}
         zh_Hans_SG{"中文 (新加坡)"}
         zh_Hant_SG{"中文 (新加坡)"}
-        zh_HK{"中文 (香港)"}
+        zh_HK{"繁體中文 (香港)"}
         zh_Hans_HK{"中文 (香港)"}
-        zh_Hant_HK{"中文 (香港)"}
+        zh_Hant_HK{"繁體中文 (香港)"}
         zh_MO{"中文 (澳門)"}
         zh_Hans_MO{"中文 (澳门)"}
         zh_Hant_MO{"中文 (澳門)"}
