--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libmeegotouch (0.20.84-4) unstable; urgency=low
+
+  * New version
+  * Fixes: NB#229146 - Class derived from MImageWidgetModel does not receive updates
+  * Temporal fix for 229146
+
+ -- Adrian Yanes <adrian@ayanes.com>  Tue, 22 Feb 2011 13:34:04 +0200
+
 libmeegotouch (0.20.84-3) unstable; urgency=low
 
   * New version
