--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,30 @@
-libmeegotouch (0.20.86~1) unstable; urgency=low
+libmeegotouch (0.20.86-1) unstable; urgency=low
 
-  * unreleased
+  * New version
+  * Fixes: NB#229278 - LMT uses invalid section values in debian control file
+  * Fixes: MApplicationMenuButtonView inheritance method calls.
+  * Fixes: NB#229146 - Class derived from MImageWidgetModel does not receive updates
+  * Fixes: NB#228596 - No possibility to change style name of MStatusBar in MApplicationWindow.
+  * Fixes: NB#229205 - Query Title elides instead of wraps.
+  * Fixes: NB#213541 - Application menu updates its contents during disappearance animation
+  * Fixes: NB#227646 - Labels in Fast Scroll Indicators are displayed outside the background.
+  * Fixes: NB#228135 - MListIndex layout is reinitialized multiple times, when MList is reparented.
+  * Fixes: MTextEdit: textChanged and cursorPositionChanged emission
+  * Fixes: NB#189492, When started with reverse option, left and right padding should be switched in MTextEdits
+  * Fixes: Fixed memoryleak from MStyleSheetParser
+  * Fixes: NB#220422 - [TASK] Using meegotouch-boostable feature adds extra mgen targets and duplicate mgen commands into Makefile
+  * Fixes: NB#214528 - MLabel does not render text in certain cases if in richtext mode.
+  * Fixes: NB#192923 - No doc-type field is specified in debain/api file in libpulse development library
+  * Fixes: Jumping text magnifier when text edit rotate.
+  * Fixes: NB#196857 - Email suggestion list hides under vkb in a scenario
+  * Fixes: NB#221139 [TASK] Transitions completely missing from button widget
+  * Fixes: NB#221842 - Scratchbox MImageWidget does not update
+  * Fixes: NB#227194 - NavigationBar hide animation does not obey MApplicationWindow::navigationBarOpacity
+  * Fixes: NB#228191 - Coverity testrun around 16.02.2011 - libmeegotouch
+  * Fixes: NB#189595 - Language names in startup not according to the specification
+  * Fixes: NB#227980 - [TASK] Page length should be changed in Widgets Gallery widgets
 
- -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Thu, 17 Feb 2011 17:36:56 +0200
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 22 Feb 2011 13:36:41 +0200
 
 libmeegotouch (0.20.85-1) unstable; urgency=low
 
