--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.87~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <adrian@ayanes.com>  Tue, 22 Feb 2011 15:49:49 +0200
+
 libmeegotouch (0.20.86-1) unstable; urgency=low
 
   * New version
