--- a/doc/src/news.dox
+++ b/doc/src/news.dox
@@ -1,5 +1,10 @@
 /*! \page news What's new in MeeGo Touch
 
+\section v02088 0.20.88
+
+\subsection New
+- MSheet and MBasicSheetHeader
+
 \section v02072 0.20.72
 - MWindow::notificationPreviewsVisible property for controlling whether notification banner previews are to be displayed on top of the window.
 
