--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.90~1) unstable; urgency=low
+
+  * unreleased
+
+ -- Adrian Yanes <ext-adrian.yanes@nokia.com>  Tue, 01 Mar 2011 16:07:42 +0200
+
 libmeegotouch (0.20.89-1) unstable; urgency=low
 
   * New version
