Changes: Added documentation for the upcoming splash screen support in applauncherd.
RevBy: Daniel d'Andrada

--- a/doc/src/launcher.dox
+++ b/doc/src/launcher.dox
@@ -185,6 +185,37 @@ running. You can now run your application as usual as
 invoker --type=m /usr/bin/application_binary
 \endcode
 
+\section splash Splash screen
+
+NOTE: The splash screen implementation is not available yet, so this
+section is for future reference only.
+
+Applauncherd supports showing a splash screen if there is mcompositor
+(the MeeGo window manager) running.
+
+The splash screen is not shown by default. If an application wants it
+to be shown, it must pass \c --splash, and optionally \c --splash-landscape
+arguments to the invoker.
+
+For instance,
+
+\code
+/usr/bin/invoker --splash=/usr/share/application_name/splash.jpg \
+		 --splash-landscape=/usr/share/application_name/splash-l.jpg \
+		 --type=m \
+		 /usr/bin/application_name
+\endcode
+
+shows the splash screen with \c splash.jpg as its content when the device
+is in the portrait orientation. Otherwise \c splash-l.jpg is shown. If
+only \c --splash is given, that image is shown in both orientations.
+
+Invoker passes the splash request to the booster. The booster sends
+the splash request to the window manager by setting a window property
+to window manager's window.
+
+If the filenames do not include absolute paths, the window manager
+looks for the files from a default location.
 
 \section debugging Debugging
 
